# BBot-Graia

./: .dockerignore  .flake8  .gitignore  Dockerfile  bot.py  install-bbot.ps1  install-bbot.sh  main.py  main.spec  nuitka.yml  pyproject.toml  readme.md  release.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: prerelease.yml  release.yml
Static/: config.json
aunly_bbot/: bot.py
aunly_bbot/cli/: run.py
aunly_bbot/core/: announcement.py  data.py
aunly_bbot/function/: __init__.py
aunly_bbot/function/event/: join_group.py
aunly_bbot/function/scheduler/: refresh_token.py  version_update.py
aunly_bbot/model/: fastapi.py
aunly_bbot/static/: mobile_style.js
aunly_bbot/utils/: get_project_version.py  uid_extract.py  verify_mah.py
bbot/: bot.py
bbot/cli/: __init__.py  config.py  run.py
bbot/core/: announcement.py  bot_config.py  group_config.py  log.py
bbot/function/: __init__.py
bbot/function/command/: vive_dynamic.py
bbot/function/event/: bot_launch.py  exception.py  (+1 more)
bbot/model/: config.py
bbot/static/: bot_config.exp.yaml
bbot/utils/: detect_package.py  dynamic_shot.py  fastapi.py
core/: __init__.py  announcement.py  bot_config.py  control.py  data.py  group_config.py  log.py  subgroup_config.py
data/: __init__.py  bot_config.exp.yaml
docs/: config.md  deploy.md  platform_adaptation.md
function/: __init__.py
function/command/: add_talk.py  announcement.py  init.py  quit_group.py  status.py  video_resolve.py  vive_dynamic.py  web_auth.py
function/console/: stop.py
function/event/: bot_launch.py  exception.py  invited_join_group.py  join_group.py  kick_from_group.py  leave_group.py  mute.py  new_friend.py  offline.py  prem_change.py
function/pusher/: dynamic.py  init.py  live.py
function/scheduled/: dynamic.py  init.py  live.py
function/scheduler/: refresh_token.py
graiax_bbot/: bot.py
graiax_bbot/cli/: __init__.py  bot.py
graiax_bbot/core/: announcement.py  context.py  control.py  log.py
graiax_bbot/function/: __init__.py
graiax_bbot/static/: bot_config.exp.yaml
graiax_bbot/utils/: bilibili_request.py  uid_extract.py  up_operation.py
graiax_bbot/website/: __init__.py
static/: bot_config.exp.yaml  mobile_style.js  mobile_style_bak.js
utils/: b23_extract.py  bilibili_request.py  draw_bili_image.py  dynamic_shot.py  fonts_provider.py  send_action.py  uid_extract.py  up_operation.py
website/: __init__.py
website/api/: model.py
(+72 files in other folders)
