[tool.poetry]
name = "bbot-graia"
version = "0.4.2"
description = "一个用于 QQ 群内高效推送哔哩哔哩 UP 动态及直播的机器人"
authors = ["djkcyl <cyl@cyllive.cn>"]
license = "AGPL3.0"

[tool.poetry.dependencies]
python = "^3.9"
graia-ariadne = {version = "0.8.4", extras = ["graia"]}
httpx = "^0.23.0"
peewee = "^3.15.2"
playwright = "^1.25.2"
pyyaml = "^6.0"
qrcode = "^7.3.1"
pillow = "^9.2.0"
bilireq = "^0.2.1"
richuru = "^0.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 96