[tool.poetry]
name = "bbot-graia"
version = "1.1.0"
description = "一个用于 QQ 群内高效推送哔哩哔哩 UP 动态及直播的机器人"
authors = ["djkcyl <cyl@cyllive.cn>"]
license = "AGPL3.0"

[tool.poetry.dependencies]
python = "^3.9"
graia-ariadne = {extras = ["standard"], version = "^0.9.4"}
peewee = "^3.15.2"
pyyaml = "^6.0"
bilireq = "^0.2.3"
psutil = "^5.9.2"
graiax-playwright = "^0.2.0"
dynamicrendergrpc = "^1.0.5"
uvicorn = "^0.18.3"
sentry-sdk = "^1.9.8"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
fastapi = "^0.85.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 96