[tool.poetry]
name = "bbot-graia"
version = "1.2.0-b2"
description = "一个用于 QQ 群内高效推送哔哩哔哩 UP 动态及直播的机器人"
authors = ["djkcyl <cyl@cyllive.cn>"]
license = "AGPL3.0"

[tool.poetry.dependencies]
python = "^3.9"
graia-ariadne = {extras = ["standard"], version = "^0.10.3"}
peewee = "^3.15.4"
pyyaml = "^6.0"
bilireq = "^0.2.3"
psutil = "^5.9.4"
graiax-playwright = "^0.2.1"
uvicorn = "^0.19.0"
sentry-sdk = "^1.12.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
fastapi = "^0.88.0"
websockets = "^10.4"
Pillow = "^9.3.0"
qrcode = "^7.3.1"
pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
memray = "^1.4.1"
yamllint = "^1.28.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 96